# Github_Radar

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_LOG.md  Dockerfile  README.md  docker-compose.yml  electron-builder.yml  package-lock.json  package.json  pyproject.toml  server.mjs
app/: cli.py  scheduler.py  task_runner.py
desktop/: main.js  python_sidecar_entry.py
docker/: entrypoint.sh
github_radar/: __init__.py
github_radar/analyze/: json_repair.py  llm_client.py  snapshot.py  structure_pass.py  synthesis.py
github_radar/discover/: deduplicate.py  github_search.py  normalize.py  retrieval.py  scoring.py  trending.py
github_radar/ingest/: content_select.py  repo_metadata.py  repo_readme.py  repo_tree.py
github_radar/models/: analysis.py  config.py  repo.py  task.py
github_radar/obsidian/: digest_writer.py  writer.py
github_radar/storage/: artifacts.py  cache.py  paths.py
packaging/: CONTAINER.md  ELECTRON.md  README.md  build-electron-dev.sh  build-electron-linux.sh  build-electron-windows.ps1  build-linux-bundled.sh  build-linux.sh  build-python-sidecar-linux.sh  build-python-sidecar-windows.ps1  build-windows-bundled.ps1  build-windows.ps1  build-windows.sh
public/: index.html
scripts/: docker-build-save.ps1  docker-build-save.sh  docker-start-windows.bat  docker-start.sh  github-radar-linux.sh  github-radar-windows.bat  github-radar-windows.ps1  github-radar.desktop  install-linux-service.sh  test-api.mjs  upload-release.sh
tests/: test_checkpoint.py  test_models.py  test_paths.py  test_phase2.py  test_phase3.py  test_phase4.py
