[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-radar"
version = "0.1.0"
description = "GitHub → Obsidian daily research pipeline with local LLM analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["github_radar*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
